# NoDataInterpolation

./: .gitignore  LICENSE  README.md  main.tex  pyproject.toml  setup.py
.github/workflows/: ci.yml  main.yml  publish.yml  release.yml
code/: __init__.py  sampling.py
code/.github/workflows/: workflow.yaml
notebooks/: experiments.ipynb  generate_data.py  how_to_combine_spectra.ipynb  standard_practices.ipynb
paper/: .gitignore  main.tex
python/ndi/: __init__.py
src/: sandbox.py
src/frizzle/: __init__.py  diag_utils.py  jax_frizzle.py  operator.py  utils.py
tests/: make_figures.py  sandbox.py  test_frizzle.py  test_ndi.py
